# conference-management

./: README.md  app.py  auxiliary.py  database.py  g_api.py  main.py  requirements.txt  table_consts.py  test.py
front-bot-tg/: bot.py  data.py  readme  user.py
homework/: README.md
homework/src/: app.py  pyproject.toml  settings.py
homework/src/api/: router.py
homework/src/api/conferences/: router.py
homework/src/api/conferences/applications/: __init__.py  applications.py  schemas.py  services.py
homework/static/: myproject-392812-84a5c4556204.json
pythonProject4/: input  main.py
pythonProject4/core/: settings.py
pythonProject4/core/data/: test_data.py
pythonProject4/core/handlers/: __init__.py  basic.py  filters.py  input_handlers.py
pythonProject4/core/keyboards/: inline.py
pythonProject4/core/utils/: commands.py  functions.py  statesforms.py
sdf/: authors.json  bot.py  conferences.json  conferences_full.json  config.py  data.json  publications.json
src/: app.py  constants.py  dbs_access.py  get_item_logic.py  router.py  schema.py  tables_settings.py  utility.py  validators.py
tests/: test_schema.py
