[tool.poetry]
name = "python-praktika"
version = "1"
description = "-"
authors = ["Aliona Predko"]
license = "None"
readme = "README.md"
packages = [{include = "python_praktika"}]

[tool.poetry.dependencies]
python = "3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
